...
        )
        LazyVerticalGrid(
            columns = GridCells.Adaptive(160.dp),
            contentPadding = PaddingValues(16.dp),
            horizontalArrangement = Arrangement.spacedBy(16.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = modifier.testTag("SneakersList")
        ) {
            items(orderSneakers, key = { it.sneakers.title}) { data ->
                SneakersItem(
                    image = data.sneakers.image,
                    title = data.sneakers.title,
                    price = data.sneakers.price,
...
